IndieLibX/build.log
make: Siirrytään hakemistoon ”/home/tronty/IndieLibX/DesktopProjects/projectsX”
make -C NSGUI all
make[1]: Siirrytään hakemistoon ”/home/tronty/IndieLibX/DesktopProjects/projectsX/NSGUI”
/usr/bin/g++ -g3 -O0  -fexceptions -fnon-call-exceptions  -std=gnu++0x -DHAS_GLCG -DLINUX -D_LINUX -Wno-enum-compare -rdynamic  --trigraphs -Wno-comment -Wno-format -Wno-write-strings  -fpermissive -fmax-errors=100 -std=gnu99 -D_DEBUG -DDEBUG -DGLSL1_1 -DUSE_HLSL_SHADERS -DMESHRENDERER2_SIMPLER -DNATURESCENEBUILD_ -I../../../Dependencies/BoostWorkaround -I../../../Libraries/assimp-5.0.1/include -I../../../Libraries/assimp-5.0.1/contrib/irrXML -I../../../Libraries/Vulkan/external -I../../../Libraries/Vulkan/include -I../../../Libraries/STX/include -I../../../Libraries/Image3 -I../../../Libraries/Framework/include -I../../../Libraries/Framework3/include -I../../../Libraries/NSGUI -I../../../Libraries/MeshRenderer2 -I../../../Libraries/tinyxml/include -I../../../Libraries/lua-5.3.4/src -I../../../Libraries/FW3/include -I../../../Samples/NatureScene/src/GUI -I../../../Libraries/tinyxml/include -w -o ../../../Libraries/NSGUI/GUI/GUIFrame.o -c ../../../Libraries/NSGUI/GUI/GUIFrame.cpp
../../../Libraries/NSGUI/GUI/GUIFrame.cpp: In constructor ‘XMLTree::XMLTree(TiXmlElement*)’:
../../../Libraries/NSGUI/GUI/GUIFrame.cpp:346:11: error: ‘class XMLElement’ has no member named ‘loadXMLSettings’
  346 |        c->loadXMLSettings(c);
      |           ^~~~~~~~~~~~~~~
make[1]: *** [Makefile:192: ../../../Libraries/NSGUI/GUI/GUIFrame.o] Virhe 1
make[1]: Poistutaan hakemistosta ”/home/tronty/IndieLibX/DesktopProjects/projectsX/NSGUI”
make: *** [Makefile:6: all] Virhe 2
make: Poistutaan hakemistosta ”/home/tronty/IndieLibX/DesktopProjects/projectsX”
